before making quickstart app + moving sseconnection and group to lib code
